<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/background_color"
    tools:context=".controller.LogInActivity">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo_desc"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/universityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/university_name"
        android:textColor="#FF0000"
        android:textSize="20sp"
        android:layout_marginBottom="30dp" />

    <EditText
        android:id="@+id/txt_logIn_Code"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:hint="@string/student_id_hint"
        android:padding="10dp"
        android:inputType="number"
        android:background="@drawable/border_edittext"
        android:layout_marginBottom="20dp" />

    <EditText
        android:id="@+id/txt_logIn_Pass"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="10dp"
        android:background="@drawable/border_edittext"
        android:layout_marginBottom="20dp" />

    <Button
        android:id="@+id/btn_logIn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/login"
        android:background="@drawable/border_buttom"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/noAccountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_account"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/register"
        android:background="@drawable/border_btn_resiter" />
</LinearLayout>