<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/background_color"
    tools:context=".controller.RegisterActivity">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo_desc"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/universityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/university_name"
        android:textStyle="bold"
        android:textColor="#FF0000"
        android:textSize="20sp"
        android:layout_marginBottom="30dp" />

    <EditText
        android:id="@+id/studentIdEditText"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:hint="@string/student_id_hint"
        android:inputType="number"
        android:padding="10dp"
        android:background="@drawable/border_edittext"
        android:layout_marginBottom="20dp" />

    <EditText
        android:id="@+id/fullNameEditText"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:hint="@string/full_name_hint"
        android:padding="10dp"
        android:background="@drawable/border_edittext"
        android:layout_marginBottom="10dp" />

    <RadioGroup
        android:id="@+id/rdGender"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Nam"
            android:textSize="18sp"
            android:textColor="#EFEFEF"
            android:layout_marginBottom="10dp"
            />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Nữ"
            android:textSize="18sp"
            android:textColor="#EFEFEF"
            android:checked="true"

            />
    </RadioGroup>

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:hint="@string/phone_hint"
        android:inputType="phone"
        android:padding="10dp"
        android:background="@drawable/border_edittext"
        android:layout_marginBottom="20dp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="10dp"
        android:background="@drawable/border_edittext"
        android:layout_marginBottom="20dp" />

    <EditText
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        android:padding="10dp"
        android:background="@drawable/border_edittext"
        android:layout_marginBottom="30dp" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/register"
        android:background="@drawable/border_btn_resiter" />
</LinearLayout>